# tria-bot

./: .coveragerc  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  pytest.ini
db/: consummer.py  models.py  publisher.py  rabbit.sh  redis.sh  sample.py
mq/: consummer.py
scripts/: report.sh  test.sh
tria_bot/: arbitrage.py  composite.py  conf.py  depth.py  gaps.py  proffit.py  testarg.py  tickers.py  utils.py
tria_bot/_db/: consummer.py
tria_bot/_mq/: rabbit.sh
tria_bot/clients/: binance.py  composite.py
tria_bot/crud/: __init__.py  base.py  composite.py  depths.py  gaps.py  proffits.py  tickers.py  top_volume_assets.py
tria_bot/db/: publisher.py  redis.sh
tria_bot/helpers/: binance.py  symbols.py  utils.py
tria_bot/models/: __init__.py  base.py  composite.py  depth.py  gap.py  proffit.py  ticker.py
tria_bot/mq/: publisher.py
tria_bot/redis_ps/: consummer.py  publisher.py
tria_bot/schemas/: gap.py  message.py  proffit.py
tria_bot/services/: arbitrage.py  base.py  composite.py  depth.py  gap.py  proffit.py  tickers.py
tria_bot/tests/: conftest.py  test_composite.py
tria_bot/tests/crud/: test_composite.py
tria_bot/tests/helpers/: test_binance.py  test_symbols.py
tria_bot/tests/model_crud/: __init__.py  test_composite.py  test_depths.py
